Upgrade to Groovy 5